src/objects/User.object
<CustomObject>
    <fields>
        <fullName>User_Region__c</fullName>
        <formula>Text(Region__c)</formula>
        <label>User Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_SBU__c</fullName>
        <description>Used to capture the SBU belonging of a user. It&apos;s based on the SBU ratio fields. If no ratio has been assigned &quot;Not Set&quot; will be displayed</description>
        <formula>LEFT(IF( SBU_Ratio_CERE__c &gt;0,&quot;CDCM-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_PREV__c&gt;0,&quot;PREV-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_REST__c&gt;0,&quot;REST-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_ENDO__c&gt;0,&quot;ENDO-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_PROS__c&gt;0,&quot;PROS-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_ORTH__c&gt;0,&quot;ORTH-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_IMPL__c&gt;0,&quot;IMPL-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_TRCE__c&gt;0,&quot;TRCE-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_INST__c&gt;0,&quot;INST-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_IMAG__c&gt;0,&quot;IMAG-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_CERE__c=0&amp;&amp;SBU_Ratio_PREV__c=0&amp;&amp;SBU_Ratio_REST__c=0&amp;&amp;SBU_Ratio_ENDO__c=0&amp;&amp;SBU_Ratio_PROS__c=0&amp;&amp;SBU_Ratio_ORTH__c=0&amp;&amp;SBU_Ratio_IMPL__c=0&amp;&amp;SBU_Ratio_INST__c=0&amp;&amp;SBU_Ratio_TRCE__c=0&amp;&amp;SBU_Ratio_IMAG__c=0,&quot;Not Set-&quot;,&quot;Error-&quot;),LEN(IF( SBU_Ratio_CERE__c &gt;0,&quot;CDCM-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_PREV__c&gt;0,&quot;PREV-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_REST__c&gt;0,&quot;REST-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_ENDO__c&gt;0,&quot;ENDO-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_PROS__c&gt;0,&quot;PROS-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_ORTH__c&gt;0,&quot;ORTH-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_IMPL__c&gt;0,&quot;IMPL-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_TRCE__c&gt;0,&quot;TRCE-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_INST__c&gt;0,&quot;INST-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_IMAG__c&gt;0,&quot;IMAG-&quot;,&quot;&quot;)&amp;IF(SBU_Ratio_CERE__c=0&amp;&amp;SBU_Ratio_PREV__c=0&amp;&amp;SBU_Ratio_REST__c=0&amp;&amp;SBU_Ratio_ENDO__c=0&amp;&amp;SBU_Ratio_PROS__c=0&amp;&amp;SBU_Ratio_ORTH__c=0&amp;&amp;SBU_Ratio_IMPL__c=0&amp;&amp;SBU_Ratio_INST__c=0&amp;&amp;SBU_Ratio_TRCE__c=0&amp;&amp;SBU_Ratio_IMAG__c=0,&quot;Not Set-&quot;,&quot;&quot;))-1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to capture the SBU belonging of a user. It&apos;s based on the SBU ratio fields. If no ratio has been assigned &quot;Not Set&quot; will be displayed</inlineHelpText>
        <label>User SBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <inlineHelpText>Sales Representative  = District Managers, Territory Managers, Account Managers

Sales Manager = Regional Sales Mgrs, Division Sales Mgrs, National Sales Mgrs</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Account Maintenance Team Member</fullName>
                </value>
                <value>
                    <fullName>Area Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Clinical Affairs</fullName>
                </value>
                <value>
                    <fullName>Complaints Handling</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Inside Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Key Account Manager</fullName>
                </value>
                <value>
                    <fullName>Managing Director</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>National Admin</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Product Manager</fullName>
                </value>
                <value>
                    <fullName>Regional Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Manager</fullName>
                </value>
                <value>
                    <fullName>Sales Representative</fullName>
                </value>
                <value>
                    <fullName>Training &amp; Event Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>View_All_EA_Products__c</fullName>
        <label>View All EA Products</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View_All_Wave_Data__c</fullName>
        <label>View All Wave Data</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WC2012_Country_Market_Target_HQ__c</fullName>
        <description>This field is set for all users but only used for analysis regarding Dental (WC2012). For analysis only. Should never appear in any page layouts</description>
        <formula>IF( ISPICKVAL(Market__c, &apos;Australia&apos;)  ||ISPICKVAL(Market__c,&apos;Benelux&apos;)  || ISPICKVAL(Market__c,&apos;NA&apos;)  || ISPICKVAL(Market__c,&apos;DEX&apos;), 
 CASE(Market__c, 
&apos;Australia&apos;, 30, 
&apos;Benelux&apos;, 75,
&apos;NA&apos;,450,
&apos;DEX&apos;,341,
null), 
 CASE(  User_Country__c , 
&apos;Austria&apos;, 46, 
&apos;Denmark&apos;, 60,
&apos;Finland&apos;,25,
&apos;France&apos;,138,
&apos;Germany&apos;,200,
&apos;Italy&apos;,65,
&apos;Japan&apos;,68,
&apos;Norway&apos;,100,
&apos;Poland&apos;,75,
&apos;Portugal&apos;,18,
&apos;Spain&apos;,80,
&apos;Sweden&apos;,300,
&apos;Switzerland&apos;,68,
&apos;UK&apos;,100,
null) 
)</formula>
        <inlineHelpText>This field is set for all users but only used for analysis regarding Dental (WC2012). For analysis only</inlineHelpText>
        <label>WC2012 Country/Market Target (HQ)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wave_Primary_SBU__c</fullName>
        <label>Wave Primary SBU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Territory_Id_1__c</fullName>
        <label>Wave Territory Id 1</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Territory_Id_2__c</fullName>
        <label>Wave Territory Id 2</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_Territory_Id_3__c</fullName>
        <label>Wave Territory Id 3</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Wave_User_Id__c</fullName>
        <label>Wave User Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Allow_Delegated_Sending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</description>
        <inlineHelpText>Check this box so that others in this Salesforce organization can send Adobe Sign agreements on behalf of this user.</inlineHelpText>
        <label>Adobe Sign Allow Sending As Other Users</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__EchoSign_Email_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</description>
        <inlineHelpText>This checkbox indicates that the user&apos;s email address has been validated in Adobe Sign API.</inlineHelpText>
        <label>Adobe Sign Email Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>q1__c</fullName>
        <label>q1</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>testInCountry1__Country_field__c</fullName>
        <label>Country field</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testInCountry1__DebugMode__c</fullName>
        <label>InCountry Debug Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Replication</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>AT_All_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Type__c</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AT: All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AU_All_Users</fullName>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>DEFAULT_CURRENCY</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CREATED_DATE</columns>
        <columns>SBU_Ratio_IMPL__c</columns>
        <columns>Sales_Channel__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Australia,New Zealand</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>ANZ: All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>DI_System_Administrators</group>
            <role>AU_Shared_Services</role>
            <roleAndSubordinatesInternal>ANZ_CRM_Analyst</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USERS.EMAIL</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.ADDRESS_COUNTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>#All Active Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Asia_All_Users</fullName>
        <columns>User_Country__c</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>User_Type__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Hong Kong,Taiwan,Malaysia,Philippines,Singapore,Thailand,Vietnam,South Korea</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Asia: All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>DI_System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BeneluxUsers</fullName>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Product_Area__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>User_Country__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>Market__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Belgium,Holland,Luxembourg</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Benelux: All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>Benelux_DI_Admin</group>
            <group>DI_System_Administrators</group>
            <role>Benelux_Shared_Services</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Benelux_Shared_Service</fullName>
        <columns>IS_FROZEN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Product_Area__c</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>Region__c</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>User_Country__c</columns>
        <columns>Sales_Channel__c</columns>
        <columns>Market__c</columns>
        <columns>CORE.USERS.TITLE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Belgium,Holland,Luxembourg</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USER_ROLE.NAME</field>
            <operation>contains</operation>
            <value>shared</value>
        </filters>
        <label>Benelux: Shared Service</label>
        <language>en_US</language>
        <sharedTo>
            <group>Benelux_DI_Admin</group>
            <group>DI_System_Administrators</group>
            <role>Benelux_Shared_Services</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Brasil_Users_2021_07</fullName>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Brazil</value>
        </filters>
        <label>Brasil Users 2021 07</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CHusers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>Product_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Switzerland</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CH: All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>CIS_All_active_Users</fullName>
        <columns>CREATED_DATE</columns>
        <columns>FULL_NAME</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <columns>DpgUser__c</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>IS_FROZEN</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Belarus,Kazakhstan,Russia,Ukraine</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>CIS All active Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>CIS_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Canada_Frozen_Users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Canada</value>
        </filters>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Canada Frozen Users</label>
        <language>en_US</language>
        <sharedTo>
            <role>NA_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DKusers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>Product_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Denmark</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DK: All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>DI_System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FRusers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>Movex_Uer_ID__c</columns>
        <columns>Product_Area__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>France</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>FR: All Users</label>
        <language>en_US</language>
        <sharedTo>
            <group>DI_System_Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Frozen_Users_pending_deactivation</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
        <columns>User_Country__c</columns>
        <columns>FULL_NAME</columns>
        <columns>DpgUser__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CRM_team_comments__c</columns>
        <columns>UPDATEDBY_USER.NAME</columns>
        <columns>CORE.USERS.DIVISION</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IS_FROZEN</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>OPEN</value>
        </filters>
        <filters>
            <field>CORE.USERS.LAST_NAME</field>
            <operation>notEqual</operation>
            <value>IN STOCK</value>
        </filters>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>notEqual</operation>
            <value>User In Stock</value>
        </filters>
        <label>Frozen Users pending deactivation</label>
        <language>en_US</language>
        <sharedTo>
            <group>Global_CRM_Requests</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Germanusers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>User_Type__c</columns>
        <columns>MANAGER</columns>
        <columns>DpgUser__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Germany,HQ: DE</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>DE: All Users</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>HK_users</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <columns>MANAGER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>User_Country__c</field>
            <operation>equals</operation>
            <value>Hong Kong</value>
        </filters>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>HK users</label>
        <language>en_US</language>
        <sharedTo>
            <role>HK_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <validationRules>
        <fullName>Enforce_Sales_Channel_For_IMPL</fullName>
        <active>false</active>
        <description>Enforce the selection of Sales Channel when the Field Sales Ratio and SBU Ratio IMPL are populated.</description>
        <errorConditionFormula>CONTAINS(Profile__c,&quot;#&quot;)
&amp;&amp; 
ProfileId  &lt;&gt; &apos;00e20000001ISWZ&apos;
&amp;&amp;
IsActive = True
&amp;&amp;
SBU_Ratio_IMPL__c &lt;&gt; 0 
&amp;&amp; 
FieldSalesRatioPerc__c &gt; 0 
&amp;&amp; 
TEXT(Sales_Channel__c) =&quot;&quot;</errorConditionFormula>
        <errorDisplayField>Sales_Channel__c</errorDisplayField>
        <errorMessage>This user is an IMPL sales rep and it&apos;s required to select the Sales Channel</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSSK__FSK_User_Creation_Feature_Inactive</fullName>
        <active>true</active>
        <description>A Field Service Starter Kit package validation rule:
The validation rule prevents the insertion of new records if the SFS Resource Type field is filled out but the Field Service users automation feature is not turned on.</description>
        <errorConditionFormula>IF(AND(NOT($Setup.FSSK__FSK_FSL_Starter_Kit__c.FSSK__Create_FSL_Resource_From_User__c),
			ISNEW(),
			OR(TEXT(FSSK__FSK_FSL_Resource_Type__c) == NULL,
			   TEXT(FSSK__FSK_FSL_Resource_Type__c) == &apos;&apos;)),
	false,
	IF(AND(ISCHANGED(FSSK__FSK_FSL_Resource_Type__c),
	   NOT($Setup.FSSK__FSK_FSL_Starter_Kit__c.FSSK__Create_FSL_Resource_From_User__c)),
	   true,
	   false)
)</errorConditionFormula>
        <errorDisplayField>FSSK__FSK_FSL_Resource_Type__c</errorDisplayField>
        <errorMessage>FSSK Package: SFS Resource Type should only be used when the Field Service users automation feature in the Field Service Starter Kit Package is activated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSSK__FSK_User_Type_Is_Not_Community</fullName>
        <active>true</active>
        <description>A Field Service Starter Kit validation rule:
The validation rule ensures that the admin can only select the Contractor Dispatcher (Community Dispatcher) value if the user record is of community type.</description>
        <errorConditionFormula>AND($Setup.FSSK__FSK_FSL_Starter_Kit__c.FSSK__Create_FSL_Resource_From_User__c,
ISBLANK(ContactId),
ISPICKVAL(FSSK__FSK_FSL_Resource_Type__c, &apos;Community&apos;))</errorConditionFormula>
        <errorDisplayField>FSSK__FSK_FSL_Resource_Type__c</errorDisplayField>
        <errorMessage>FSSK Package: This SFS Resource Type value should only be used for community user records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSSK__FSK_User_Type_Is_Not_Standard</fullName>
        <active>true</active>
        <description>A Field Service Starter Kit package validation rule.
The validation rules prevent the admin from selecting the Contractor Dispatcher (Community Dispatcher) value if the user record is not of a community type.</description>
        <errorConditionFormula>AND($Setup.FSSK__FSK_FSL_Starter_Kit__c.FSSK__Create_FSL_Resource_From_User__c,
NOT(TEXT(Profile.UserType) = &apos;Standard&apos;),
LEN(TEXT(FSSK__FSK_FSL_Resource_Type__c)) &gt; 1,
NOT(CONTAINS(TEXT(FSSK__FSK_FSL_Resource_Type__c), &apos;Community&apos;))
)</errorConditionFormula>
        <errorDisplayField>FSSK__FSK_FSL_Resource_Type__c</errorDisplayField>
        <errorMessage>FSSK Package: This SFS Resource Type value should only be used for users with a Salesforce user license</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_Number_Of_Default_SBUs</fullName>
        <active>true</active>
        <description>Prevents too many default SBUs from being selected. Selecting too many default SBUs will result in the create CFE page from failing because there will be too many dependant picklists on the page.</description>
        <errorConditionFormula>IF(INCLUDES(Default_CFE_SBUs__c, &quot;Implants&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Endodontics&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Orthodontics&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Preventive&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Prosthetics&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Restorative&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;CAD/CAM&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Instruments&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Treatment Centers&quot;),1,0) +
IF(INCLUDES(Default_CFE_SBUs__c, &quot;Imaging Systems&quot;),1,0) &gt; 7</errorConditionFormula>
        <errorDisplayField>Default_CFE_SBUs__c</errorDisplayField>
        <errorMessage>You cannot select more than seven default SBUs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Only_System_Admin_or_DNA_Ops_can_change</fullName>
        <active>false</active>
        <description>Only the System Admin Global or DNA Sales Ops can change titles</description>
        <errorConditionFormula>$Profile.Name != &quot;#System Admin - Global CRM&quot; 
&amp;&amp; 
 $UserRole.Id  &lt;&gt;&quot;00E0J000001FtaC&quot; 
&amp;&amp; 
(Profile.Id  = &quot;00e0J000001Yhbu&quot; 
|| 
Profile.Id= &quot;00e0J000001Yhbv&quot; 
|| 
Profile.Id = &quot;00e0J000001Yhbt&quot; 
) 
&amp;&amp; 
ISCHANGED( Title )</errorConditionFormula>
        <errorDisplayField>Title</errorDisplayField>
        <errorMessage>Please email USFieldSupport@DentsplySirona.com to request an update to your title</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Fields</fullName>
        <active>false</active>
        <description>Using a validation rule to control the required fields is better than setting the fields required on layout. e.g for inactive users</description>
        <errorConditionFormula>CONTAINS(Profile__c,&quot;#&quot;)
&amp;&amp; 
ProfileId !=&quot;00e20000001ISWZ&quot;
&amp;&amp;
IsActive = True
&amp;&amp;
(
TEXT( User_Country__c )= &quot;&quot;
||
Text( User_Type__c )= &quot;&quot;
)</errorConditionFormula>
        <errorMessage>Both the User Country &amp; User Type fields are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBU_Ratio_not_exceed_100</fullName>
        <active>false</active>
        <description>SBU ratio should be exactly 100%. Add markets after they have completed ONE SFDC.</description>
        <errorConditionFormula>CONTAINS(Profile__c,&quot;#&quot;)
&amp;&amp; 
IsActive = True
&amp;&amp;
ProfileId !=&quot;00e20000001ISWZ&quot;
&amp;&amp;
TEXT(UserType)=&quot;Standard&quot;
&amp;&amp;
Profile__c !=&quot;PT1&quot;
&amp;&amp; 
NOT(CONTAINS(Profile__c,&quot;System&quot;))
&amp;&amp;
ROUND(
SBU_Ratio_ENDO__c 
+ 
SBU_Ratio_IMPL__c 
+ 
SBU_Ratio_ORTH__c 
+ 
SBU_Ratio_PREV__c 
+ 
SBU_Ratio_PROS__c 
+ 
SBU_Ratio_REST__c
+
SBU_Ratio_CERE__c 
+ 
SBU_Ratio_IMAG__c 
+
SBU_Ratio_TRCE__c 
+
SBU_Ratio_INST__c 
,2) 
&lt;&gt; 1.00</errorConditionFormula>
        <errorMessage>The SBU ratio total doesn&apos;t represent 100%, please review your entry.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sales_Channel_Only_For_IMPL</fullName>
        <active>false</active>
        <description>To populate the Sales Channel, the user should be a sales rep with Field Sales Ratio (%) and the SBU Ratio (IMPL) is at least 1%</description>
        <errorConditionFormula>(SBU_Ratio_IMPL__c = 0
||
FieldSalesRatioPerc__c = 0)
&amp;&amp;
TEXT(Sales_Channel__c) != &quot;&quot;
&amp;&amp;
IsActive = True
&amp;&amp;
ProfileId !=&quot;00e20000001ISWZ&quot;
&amp;&amp;
CONTAINS(Profile__c,&quot;#&quot;)</errorConditionFormula>
        <errorDisplayField>Sales_Channel__c</errorDisplayField>
        <errorMessage>This User doesn&apos;t look like an IMPL sales rep, check &quot;SBU Ratio (IMPL)&quot; and &quot;Field Sales Ratio (%)&quot;</errorMessage>
    </validationRules>
</CustomObject>